# flexetl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile.sh  release_notes.txt
config/: test.cfg
contrib/: contrib_git
contrib/clickhouse-cpp/: CMakeLists.txt
contrib/libconfig/: CMakeLists.txt
example/: 01_php_writer_data.php  02_create_tables.md  test.cfg
src/flexetl/: CMakeLists.txt  backuper.cpp  backuper.h  click2db.cpp  click2db.h  clicktbl.cpp  clicktbl.h  clicktbl.inl  flexetl.cpp  flexetl.h  handler.h  json2click.cpp  json2click.h  main.cpp  nodes.cpp  nodes.h  pipebase.cpp  pipebase.h  pipeline.cpp  pipeline.h  pipeset.cpp  pipeset.h  watcher.cpp  watcher.h
src/jsontest/: CMakeLists.txt  main.cpp
src/stem/: metrics.h  pid_file.h  spdlog_init.h  tcp_socket.h
src/stem/metrics/: CMakeLists.txt  metrics.cpp  metrics.h
src/stem/project_version/: CMakeLists.txt  cmd_get_version_git.cmake  get_version_git.cmake
